--- a/Resources/Private/Sass/demo/_components.list.scss
+++ b/Resources/Private/Sass/demo/_components.list.scss
@@ -189,7 +189,7 @@
     }
 
     span{
-      margin: .25em auto auto;
+      margin: 1px auto auto;
     }
   }
 }
